split by comma list origins